# post_processing_agent

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.rst  Makefile  README.md  README.rst  README_developer.md  codecov.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  rpmbuild.sh  setup.cfg
.github/: dependabot.yml  setup_dev_env.sh
.github/workflows/: actions.yml  build-rpm.yml  test_and_deploy.yml  update-lockfile.yml
SPECS/: postprocessing.spec  snsrepo.spec
configuration/: icat4_dev.cfg  icat4_prod.cfg  icatclient.properties.development  post_process_consumer.conf.development  post_process_consumer.conf.local  post_process_consumer.conf.remote
postprocessing/: Configuration.py  Consumer.py  PostProcessAdmin.py  __init__.py  ingest_nexus.py  ingest_reduced.py  publish_plot.py  publishplot.py  queueProcessor.py  reduction_script_writer.py  time_conversions.py
postprocessing/processors/: CreateReductionScript_Processor.py  ReductionProcessor.py  base_processor.py  calvera_processor.py  create_reduction_script_processor.py  intersect_processor.py  job_handling.py  job_tree.py  ndip_processor.py  oncat_processor.py  oncat_reduced_processor.py  reduction_processor.py  test_processor.py
scripts/: ar-report.py  ar_report.py  mantidpython.py  qsubJob.sh  remoteJob.sh  run_mantid_algorithm.py_template  startJob.sh
systemd/: autoreduce-queue-processor.service
tests/: .reduce_EQSANS.py.swp  .test_mantidpython.py.swp  conftest.py  reduce_CONDA.py  reduce_EQSANS.py  reduce_HYS.py  reduce_Mantid50.py  reduce_NOM.py  reduce_REF_L.py  reduce_SNAP.py  test_mantidpython.py
tests/data/: post_processing.conf  post_processing.conf.original  reduce_CNCS.py  reduce_CNCS.py.template
tests/integration/: Dockerfile  Dockerfile.oncat  Dockerfile.rpm-test  docker-compose-rpm.yml  docker-compose.yml  oncat_server.py  post_processing.conf  run_rpm_tests.sh  test_cataloging.py  test_create_script.py  test_data_ready.py  test_heartbeat.py  test_hfir_access.py  test_plot_publisher_integration.py  test_rpm_scriptlets.py  test_rpm_scriptlets.sh  validate_rpm_compliance.py
tests/unit/postprocessing/: test_Configuration.py  test_Consumer.py  test_PostProcessAdmin.py  test_publish_plot.py  test_reduction_script_writer.py
tests/unit/postprocessing/processors/: test_base_processor.py  test_job_handling.py  test_oncat_processor.py
tests/unit/scripts/: test_ar_report.py
