[project]
name = "postprocessing"
description = "Post-processing agent to automatically catalog and reduce neutron data"
version = "3.4.0"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "plotly",
    "stomp.py"
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/neutrons/post_processing_agent"

[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["postprocessing", "postprocessing.processors", "scripts"]

[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules/
#select = ["A", "ARG", "BLE", "E", "F", "I", "PT"]
ignore = ["E401", "E402", "F403", "F405" # issues with imports
]

[tool.pytest.ini_options]
pythonpath = [".", "scripts"]
