[metadata]
name = postprocessing
version = 2.5
description = Post-processing agent to automatically catalog and reduce neutron data
long_description = file: README.md, LICENSE.rst
url = https://github.com/neutrons/post_processing_agent
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking

[options]
python_requires = >= 3.7
packages = find:
install_requires =
  requests
  stompest
  suds
  twisted
include_package_data = true
scripts =
    scripts/ar-report.py
    scripts/mantidpython.py
    scripts/qsubJob.sh
    scripts/remoteJob.sh
    scripts/run_mantid_algorithm.py_template
    scripts/startJob.sh

[options.packages.find]
exclude =
    tests*

[options.extras_require]
tests = pytest

[aliases]
test = pytest
