[metadata]
name = postprocessing
version = 2.6
description = Post-processing agent to automatically catalog and reduce neutron data
long_description = file: README.md, LICENSE.rst
url = https://github.com/neutrons/post_processing_agent
license = MIT
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking

[options]
python_requires = >= 2.7
packages = find:
install_requires =
  requests
  stompest
  suds
  twisted
include_package_data = true
scripts =
    scripts/ar-report.py
    scripts/mantidpython.py
    scripts/qsubJob.sh
    scripts/remoteJob.sh
    scripts/run_mantid_algorithm.py_template
    scripts/startJob.sh

[options.packages.find]
exclude =
    tests*

[options.extras_require]
tests = pytest

[aliases]
test = pytest
